<resources>
    <string name="app_name">MyMargdarshaka</string>
    <string name="student_login_text">I am a student</string>
    <string name="mentor_login_text">I am a mentor</string>
    <string name="hindi_chip">हिंदी</string>
    <string name="english_chip">English</string>
    <string name="welcome_string">WELCOME\nTO\nSCHOOLR</string>
    <string name="login_text">To get started,\nenter your \nphone number</string>
    <string name="login_phone_number">Phone Number</string>
    <string name="get_otp_button_text">GET OTP</string>
    <string name="verify">verify</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="otp">OTP</string>
    <string name="question_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </string>
    <string name="question">Question</string>
    <string name="option">OPTION</string>
    <string name="option_1">OPTION 1</string>
    <string name="option_2">OPTION 2</string>
    <string name="option_3">OPTION 3</string>
    <string name="option_4">OPTION 4</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="guidelines_for_students">GUIDELINES FOR STUDENTS</string>
    <string name="guidelines_for_mentors">GUIDELINES FOR MENTORS</string>

    <!--Sign Up UI Strings-->
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="class_label">Class</string>
    <string name="language_label">Preferred Language of Instruction</string>
    <string name="time_label">Preferred Time Slot</string>
    <string name="student_subjects">Which subjects do you want to learn?</string>
    <string name="mentor_subjects">What do you want to teach?</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="math">Math</string>
    <string name="telugu">Telugu</string>
    <string name="science">Science</string>
    <string name="social">Social Science</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="biology">Biology</string>
    <string name="history">History and Civics</string>
    <string name="geography">Geography</string>

    <string name="class6">Class 6</string>
    <string name="class7">Class 7</string>
    <string name="class8">Class 8</string>
    <string name="class9">Class 9</string>
    <string name="class10">Class 10</string>
    <string name="class11">Class 11</string>
    <string name="class12">Class 12</string>

</resources>