<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="55dp">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#DDD"
        app:cardElevation="8dp"
        app:contentPadding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/text_question_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <!--Options are filled with the same placeholder text-->

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_question"
        android:layout_marginTop="15dp"
        android:checkedButton="@+id/radio_button_1">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:text="@string/option_1"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:text="@string/option_2"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:text="@string/option_3"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:text="@string/option_4"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />
    </RadioGroup>

    <Button
        android:id="@+id/button_next"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/next"
        android:textColor="@color/pink"
        app:cornerRadius="50dp" />

    <!-- The following button is for the final question   -->

    <!--    <Button-->
    <!--        android:id="@+id/button_submit"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="15dp"-->
    <!--        android:text="@string/submit"-->
    <!--        android:backgroundTint="@color/blue"-->
    <!--        app:cornerRadius="50dp" />-->

</RelativeLayout>