<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthSignupMentors1">

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:layout_marginTop="72dp"
            android:hint="@string/email_label"
            app:boxStrokeColor="#3A0CA3"
            app:hintTextColor="#7209B7"
            app:layout_constraintBottom_toTopOf="@+id/nameTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHighlight="#3A0CA3"
                android:textColorHint="#3A0CA3"
                app:layout_constraintBottom_toBottomOf="@+id/emailTextField"
                app:layout_constraintEnd_toEndOf="@+id/emailTextField"
                app:layout_constraintStart_toStartOf="@+id/emailTextField"
                app:layout_constraintTop_toTopOf="@+id/emailTextField" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:layout_marginTop="15dp"
            android:hint="@string/name_label"
            app:boxStrokeColor="#3A0CA3"
            app:hintTextColor="#7209B7"
            app:layout_constraintBottom_toTopOf="@+id/class_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHighlight="#3A0CA3"
                android:textColorHint="#3A0CA3"
                app:layout_constraintBottom_toBottomOf="@+id/nameTextField"
                app:layout_constraintEnd_toEndOf="@+id/nameTextField"
                app:layout_constraintStart_toStartOf="@+id/nameTextField"
                app:layout_constraintTop_toTopOf="@+id/nameTextField" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/language_select"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="300dp"
            android:layout_height="62dp"
            android:layout_marginTop="15dp"
            android:hint="@string/language_label"
            app:boxStrokeColor="#3A0CA3"
            app:hintTextColor="#7209B7"
            app:layout_constraintBottom_toTopOf="@+id/time_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextField">

            <AutoCompleteTextView
                android:id="@+id/text_view_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_select"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="300dp"
            android:layout_height="62dp"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="#3A0CA3"
            app:hintTextColor="#7209B7"
            android:hint="@string/time_label">

            <AutoCompleteTextView
                android:id="@+id/text_view_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/mentorsSignupButton1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/next"
            android:textColor="#4CC9F0"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/class_select"
            app:strokeColor="#4CC9F0" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>